--- a/va-shows/various_artists_01_08_2009_02_08_2009_video_compilation/index.html
+++ b/va-shows/various_artists_01_08_2009_02_08_2009_video_compilation/index.html
@@ -63,7 +63,7 @@ Linkin Park, Heaven And Hell, The Used, Alien Ant Farm, Anthrax, Bullet For My V
    <table>
       <thead>
          <tr>
-            <th>Artist</th>
+            <th>Artists</th>
             <th>Start Date</th>
             <th>End Date</th>
             <th>City</th>
