--- a/helpers/tl_tool/index.html
+++ b/helpers/tl_tool/index.html
@@ -294,11 +294,25 @@
             </div>
             <div class="col-3">
               <label class="form-label">Source Media Type</label>
-              <input id="sourceMediaType" type="text" class="form-control form-control-sm">
+              <select id="sourceMediaType" class="form-select form-select-sm">
+                <option value=""></option>
+                <option>HD</option>
+                <option>Digicam</option>
+                <option>WebStream</option>
+                <option>Phone</option>
+                <option>VHS</option>
+                <option>DV</option>
+                <option>HI8</option>
+                <option>8mm</option>
+              </select>
             </div>
             <div class="col-3">
-              <label class="form-label">Final Media Type</label>
-              <input id="finalMediaType" type="text" class="form-control form-control-sm">
+              <label class="form-label">Source Media Type</label>
+              <select id="finalMediaType" class="form-select form-select-sm">
+                <option value=""></option>
+                <option>HD</option>
+                <option>VCD</option>
+              </select>
             </div>
             <div class="col-3">
               <label class="form-label">File Format</label>
