--- a/helpers/tl_tool/index.html
+++ b/helpers/tl_tool/index.html
@@ -107,6 +107,10 @@
                 <option value="Source 3">Source 3</option>
                 <option value="Source 4">Source 4</option>
                 <option value="Source 5">Source 5</option>
+                <option value="Source 6">Source 6</option>
+                <option value="Source 7">Source 7</option>
+                <option value="Source 8">Source 8</option>
+                <option value="Source 9">Source 9</option>
               </select>
             </div>
             <div class="col">
