--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
                <strong>1</strong>
             </div>
             
+            <div class="trader-item">📼
+               KhAoS182
+               <strong>1</strong>
+            </div>
+            
          </div>
       </div>
    </div>
